'fixed' slider content beeing out of container on landscape phones (added min height to slider)

--- a/css/slider.css
+++ b/css/slider.css
@@ -3,7 +3,8 @@
 #slider-container
 {
 	height: 50%;
-    width: 100%;
+	width: 100%;
+	min-height: calc(130px + 10vw);
 	margin-top: 50px;
 	text-align: center;
 }
@@ -213,7 +214,7 @@
 {
 	z-index: 2;
 	position: absolute;
-	bottom: calc(8px + 1vw);
+	bottom: calc(2px + 2vw);
 	padding:0;
 	justify-content: center;
 	list-style:none;
